--- a/RickNotifications/RickNotifications.Android/RickContacts.Android.csproj
+++ b/RickNotifications/RickNotifications.Android/RickContacts.Android.csproj
@@ -169,5 +169,16 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\xamagon_preview.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResourceAnalysisConfig Include="Resources\mipmap-anydpi-v26\launch_screen.xml">
+      <SubType>Designer</SubType>
+    </AndroidResourceAnalysisConfig>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\twitter.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
