--- a/RickNotifications/RickNotifications.Android/RickNotifications.Android.csproj
+++ b/RickNotifications/RickNotifications.Android/RickNotifications.Android.csproj
@@ -75,8 +75,10 @@
     <PackageReference Include="FirebaseDatabase.net">
       <Version>4.0.6</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>5.0.0.2012</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -88,6 +90,9 @@
     <AndroidAsset Include="Assets\loading_gears.json" />
     <AndroidAsset Include="Assets\64006-windy-candy.json" />
     <AndroidAsset Include="Assets\63793-404-lost-in-space.json" />
+    <AndroidAsset Include="Assets\63007-motion.json" />
+    <AndroidAsset Include="Assets\63954-loading-text-animation.json" />
+    <AndroidAsset Include="Assets\63824-topset-boy-on-swing.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -194,10 +199,7 @@
     <AndroidResource Include="Resources\layout\Activity_Splash.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Tabbar.axml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\Toolbar.axml" />
+    <AndroidResource Include="Resources\drawable\ricklogonovo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
